KCPQ_Project/objects/SBQQ__ProcessInput__c.object
<CustomObject>
    <fields>
        <fullName>Accessory__c</fullName>
        <label>Accessory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Accessory__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DVD Systems</fullName>
                </value>
                <value>
                    <fullName>Keyless Entry</fullName>
                </value>
                <value>
                    <fullName>Lamps, Lights and Treatments</fullName>
                </value>
                <value>
                    <fullName>Parking Assit System</fullName>
                </value>
                <value>
                    <fullName>Remote Start</fullName>
                </value>
                <value>
                    <fullName>Vehicle Security</fullName>
                </value>
                <value>
                    <fullName>Covers and Protectors</fullName>
                </value>
                <value>
                    <fullName>Deflectors</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>Graphics, Stripes and Trim Kits</fullName>
                </value>
                <value>
                    <fullName>Racks and Carriers</fullName>
                </value>
                <value>
                    <fullName>Splash Guards</fullName>
                </value>
                <value>
                    <fullName>Spoilers</fullName>
                </value>
                <value>
                    <fullName>Ash or Coin Cup</fullName>
                </value>
                <value>
                    <fullName>Cargo Organization</fullName>
                </value>
                <value>
                    <fullName>Door Spill Plates</fullName>
                </value>
                <value>
                    <fullName>Floor Mats</fullName>
                </value>
                <value>
                    <fullName>Gear Shift Knobs</fullName>
                </value>
                <value>
                    <fullName>Locks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body_Style__c</fullName>
        <label>Body Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Hatchback</fullName>
                </value>
                <value>
                    <fullName>Convertible</fullName>
                </value>
                <value>
                    <fullName>SUV &amp; Crossover</fullName>
                </value>
                <value>
                    <fullName>Truck &amp; Van</fullName>
                </value>
                <value>
                    <fullName>Hybrids &amp; EVs</fullName>
                </value>
                <value>
                    <fullName>Commercial trucks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPG__c</fullName>
        <label>MPG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Least 20 MPG</fullName>
                </value>
                <value>
                    <fullName>At Least 30 MPG</fullName>
                </value>
                <value>
                    <fullName>At Least 40 MPG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Vehicles</fullName>
                </value>
                <value>
                    <fullName>Commercial Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <label>Model Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_Source__c</fullName>
        <label>Power Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>EcoBoost</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Plug-In Hybrid</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seating__c</fullName>
        <label>Seating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Least 4 Passengers</fullName>
                </value>
                <value>
                    <fullName>At Least 7 Passengers</fullName>
                </value>
                <value>
                    <fullName>At Least 10 Passengers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Accessory__c</fullName>
        <label>Type of Accessory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Exterior</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>Wheels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>